// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcticonButton passes the "size" prop to the Octicon 1`] = `
<button
  aria-label=""
  className="btn-link text-inherit emotion-0"
  disabled={undefined}
  onClick={undefined}
>
  <svg
    aria-hidden="true"
    aria-label={undefined}
    className="octicon"
    height={128}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={128}
  >
    <circle
      cx={8}
      cy={8}
      r={8}
    />
  </svg>
</button>
`;

exports[`OcticonButton renders a button with an Octicon 1`] = `
<button
  aria-label=""
  className="btn-link text-inherit emotion-0"
  disabled={undefined}
  onClick={undefined}
>
  <svg
    aria-hidden="true"
    aria-label={undefined}
    className="octicon"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <circle
      cx={8}
      cy={8}
      r={8}
    />
  </svg>
</button>
`;
